# cisco_sdwan_workflow

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: sdwan-pipeline.yaml  sdwan-terraform.yaml
configs/devices/: branch_devices.yaml
configs/policies/: traffic_policy.yaml
configs/schemas/: device_schema.json  policy_schema.json  template_schema.json
configs/templates/: branch_templates.yaml  demo_lab_templates.yaml
configs_exported/devices/: inventory.yaml
configs_exported/policies/: centralized_policies.yaml
configs_exported/templates/: device_templates.yaml  feature_templates.yaml
pipeline/: cli.py  deploy.py  export.py  plan.py  validate.py
sdwan_client/: __init__.py  auth.py  devices.py  policies.py  templates.py
terraform/: apply.sh  device_templates.tf  outputs.tf  policies.tf  providers.tf  templates.tf  variables.tf
terraform/environments/lab/: lab.tfvars
terraform/environments/prod/: prod.tfvars
tests/: test_configs.py  test_pipeline.py  test_sandbox_connection.py
