[project]
name = "sdwan-cicd-poc"
version = "0.1.0"
description = "Cisco SD-WAN CI/CD Pipeline PoC - Infrastructure as Code"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "deepdiff>=7.0",
    "rich>=13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
]

[project.scripts]
sdwan-pipeline = "pipeline.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
